rhai/codegen/ui_tests/export_mod_missing_value.stderr
error: requires value
  --> $DIR/export_mod_missing_value.rs:11:11
   |
11 | #[rhai_fn(name)]
   |           ^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> $DIR/export_mod_missing_value.rs:22:8
   |
22 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of undeclared crate or module `test_mod`
